Fix spacing to fit portal better, resize plots, remove pretty container, remove axes titles and rearrange legends

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,14 +11,13 @@ See https://github.com/Farkites/where_to_live/blob/main/assets/style.css */
   background-color: #333333;
   padding: 15px;
   color: #FFFFFF;
-  opacity: 0.6;
   border-radius: 5px;
   align: left;
   text-align: left;
   position: absolute;
-  top:1%;
-  left:6%;
-  width: 400px;
+  top:3%;
+  left:3%;
+  width: 33%;
 }
 
 #filters-container:hover{
@@ -29,7 +28,7 @@ See https://github.com/Farkites/where_to_live/blob/main/assets/style.css */
 }
 
 #filter-inputs {
-  height: 400px;
+  height: 600px;
   overflow-y: scroll;
   margin-top: 10px;
 }
@@ -38,7 +37,7 @@ See https://github.com/Farkites/where_to_live/blob/main/assets/style.css */
   cursor: pointer;
 }
 
-#filter-inputs-arrow {
+.dropdown-arrow {
     position: absolute;
     top: 15px;
     padding: inherit;
@@ -52,8 +51,8 @@ See https://github.com/Farkites/where_to_live/blob/main/assets/style.css */
   border-radius: 5px;
   opacity: 0.6;
   position: absolute;
-  top: 1%;
-  left: 36%;
+  top: 3%;
+  left: 40%;
 }
 
 #update-button:hover {
@@ -75,6 +74,34 @@ See https://github.com/Farkites/where_to_live/blob/main/assets/style.css */
   color: #000000;
 }
 
+#plots-container{
+  z-index: 2;
+  background-color: #333333;
+  padding: 15px;
+  color: #FFFFFF;
+  border-radius: 5px;
+  align: left;
+  text-align: left;
+  position: absolute;
+  top: 3%;
+  right: 3%;
+  width: 40%;
+}
+
+#plots-container h2{
+    margin: 5px;
+}
+
+#plots-toggle:hover {
+  cursor: pointer;
+}
+
+#plot-displays {
+    height: 600px;
+    overflow-y: scroll;
+    margin-top: 10px;
+}
+
 #highlights-container {
     z-index: 2;
     padding: 5px;
@@ -82,7 +109,8 @@ See https://github.com/Farkites/where_to_live/blob/main/assets/style.css */
     border-radius: 5px;
     text-align: center;
     position: absolute;
-    top:500px;
+    top: auto;
+    bottom: 5%;
     left: 13.5%;
     width: 73%;
 }
@@ -101,6 +129,9 @@ See https://github.com/Farkites/where_to_live/blob/main/assets/style.css */
   background-color: rgba(0,0,0,0);
 }
 
+.card-subtitle {
+  font-size: 0.8rem;
+}
 
 /* Adapted from Jon Mease, Jose Diaz-Gonzalez, Elliot Gunn, and Rob Calvin https://github.com/plotly/dash-world-cell-towers/blob/master/dash_opencellid/assets/s1.css */
 .pretty_container {
